02/kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hw02-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hw02-app
  template:
    metadata:
      labels:
        app: hw02-app
    spec:
      containers:
      - name: hw02
        image: perevozov/arch:2
        ports:
        - name: web 
          containerPort: 8000
