02/kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hw02-service
spec:
  selector:
    app: hw02-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
