02/kube/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hw02-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: bit.homework
    http:
      paths:
        - path: /bitapp/perevozov/hw02($|/)(.*)
          backend:
            serviceName: hw02-service
            servicePort: 8000
